form html örneği

--- a/örnek.html
+++ b/örnek.html
@@ -10,7 +10,7 @@
                  <br>
             <ol>1. Web Tasarım ve Programlama</ol>
            <ol> 2. Grafik Animasyon</ol>
-           <ol>Veri Tabanı Organizasyonu</ol>
+           <ol>3. Veri Tabanı Organizasyonu</ol>
             </body>
         </head>
     </html>
