--- a/form.html
+++ b/form.html
@@ -34,6 +34,12 @@
              Erkek <input type="radio" name="cinsiyet">
              <br>
              <br>
+             <tr>
+                <td>Doğum tarihiniz: </td>
+                <td><input type="date"></td>
+             </tr>
+             <br>
+             
                Hobileriniz:   Sinema <input type="checkbox">
                
                Gezmek <input type="checkbox">
