--- a/css ders/index.html
+++ b/css ders/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>css örneği</title>
 <body>
 <H1 style="color: hotpink;"> CURLY GİRL</H1>
 <br>
