--- a/css ders/yazıörneği.html
+++ b/css ders/yazıörneği.html
@@ -9,12 +9,9 @@
 } </style>
     <h1>akustik gitar çalmak istiyorum.</h1>
 <h1>spora gitmek istiyorum.</h1> 
-
-.yaziozellik{
-    color-scheme: red;
-}
 <h2>tatile gitmek istiyorum.</h2>
-<h2 yaziozellik>kitap almak istiyorum.</h2>
+<h2>kitap almak istiyorum.</h2>
 
 </body>
+</head>
 </html>
