--- a/css ders/yazıörneği.html
+++ b/css ders/yazıörneği.html
@@ -8,10 +8,7 @@
     color: rgb(129, 171, 226);
 } </style>
     <h1>akustik gitar çalmak istiyorum.</h1>
-<h1>spora gitmek istiyorum.</h1> 
-<h2>tatile gitmek istiyorum.</h2>
-<h2>kitap almak istiyorum.</h2>
-
+<h2>kitap okumayı seviyorum.</h2>
 </body>
 </head>
 </html>
