--- a/css ders/csschallange.html
+++ b/css ders/csschallange.html
@@ -4,37 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    
+
     <style>
         body{
            background-color: black;
         }
-    </style>
-    <style> p{
-        color: white;
-    }
-    
-    </style>
-    <style>
+
+        p{ 
+            color: white;
+        }
+
         .text{
             text-align: center;
         }
-    </style>
-<style>
-    h1{
-        color: white;
-    }
-</style>
 
-    <h1 class="text"><b>Meet Dcoder</b></h1>
-    <p class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel tempore iste consectetur nam sit possimus enim quisquam animi, autem ducimus dicta quia.</p>
+        h1{
+            color: white;
+        }
+    </style>
+
+</head>
+<body>
+   <br>
+
+        <h1 class="text"><b>Meet Dcoder</b></h1>
+        <p class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel tempore iste consectetur nam sit possimus enim quisquam animi, autem ducimus dicta quia.</p>
     <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <h1><b>The power of coding on any mobile device </b></h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam impedit nisi repudiandae dolor, sed, distinctio quam laborum at animi tenetur consequatur officiis quis ad vel quaerat eius reiciendis? Fugiat, accusantium. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+
+        <h1><b>The power of coding on any mobile device </b></h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam impedit nisi repudiandae dolor, sed, distinctio quam laborum at animi tenetur consequatur officiis quis ad vel quaerat eius reiciendis? Fugiat, accusantium. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
         Fuga eligendi laboriosam nemo nisi magni accusantium error quam qui, minima pariatur minus doloremque excepturi?
          Facere culpa vero pariatur voluptatum laboriosam delectus. Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Quasi sunt voluptatum aliquid laboriosam vel veritatis id consectetur ullam nesciunt nam! Doloremque consequuntur quia sunt temporibus debitis id dolore perspiciatis sit.</p>
