--- a/css ders/csschallangeiki.html
+++ b/css ders/csschallangeiki.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        .arkaplan{
-            background-color: greenyellow
+        .boldYap{
+            background-color: greenyellow;
+            font-weight: bold;
         }
     
         p{
@@ -15,9 +16,10 @@
     </style>
 </head>
 <body>
-<h1><B>Lorem İpsum Dolor</B></h1>
-<p class="arkaplan">Lorem ipsum dolor sit amet consectetur, adipisicing elit etur adipisicing elit Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates enim minus qui? Magnam animi nulla obcaecati quaerat pariatur, nam suscipit optio neque labore atque minus modi magni, cupiditate tempore odit?
+<div><h1>Lorem İpsum Dolor</h1></div>
+<div class="boldYap">Lorem ipsum dolor sit amet consectetur, adipisicing elit etur adipisicing elit Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates enim minus qui?
+     Magnam animi nulla obcaecati quaerat pariatur, nam suscipit optio neque labore atque minus modi magni, cupiditate tempore odit?
      Repellat explicabo voluptatem,
-      reprehenderit quod at necessitatibus praesentium minus.</p>
+      reprehenderit quod at necessitatibus praesentium </div>
 </body>
 </html>
