border ve görselli çalışma

--- a/css ders/kus border proje/border ve resim.html
+++ b/css ders/kus border proje/border ve resim.html
@@ -6,17 +6,21 @@
     <title>Document</title>
        <style>
          .border{
-            background-color: azure;
-            width: 500px;
-            height: 500px;
+            background-color: rgb(255, 255, 255);
+            width: 600px;
+            height: 700px;
             border: solid;
          }
        </style>
 </head>
 <body>
     <h1>Lorem, ipsum.</h1>
-    <br>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati, Lorem ipsum dolor sit amet.</p>
-     <div class="border"></div>
+     <div class="border">
+        <h1>Lorem, ipsum.</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+        <img src="kus.jpg" width="500px" height="500px">
+        <p style="justify-self: center;">Lorem, ipsum dolor.</p>
+     </div>
 </body>
 </html>
